docs: :memo: update biography

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
+      homepage: 'about.md',
+      loadSidebar: true,
+      alias: {
+      '/.*/_sidebar.md': '/_sidebar.md'
+      },
+      name: 'Yu-Chen Dai',
       repo: ''
     }
   </script>
