--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       '/.*/_sidebar.md': '/_sidebar.md'
       },
       name: 'Yu-Chen Dai',
-      repo: ''
+      repo: 'double-dai'
     }
   </script>
   <!-- Docsify v4 -->
